# ngraph.native

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile-demo  main.cpp
demo/gcc/: main.cpp
demo/ngraph.native.demo/ngraph.native.demo/: main.cpp
demo/ngraph.native.demo/ngraph.native.demo.xcodeproj/: project.pbxproj
demo/ngraph.native.demo/ngraph.native.demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demo/ngraph.native.demo/ngraph.native.demo.xcodeproj/project.xcworkspace/xcshareddata/: ngraph.native.demo.xccheckout
demo/ngraph.native.demo/ngraph.native.demo.xcodeproj/project.xcworkspace/xcuserdata/anvaka.xcuserdatad/: UserInterfaceState.xcuserstate
demo/ngraph.native.demo/ngraph.native.demo.xcodeproj/xcuserdata/anvaka.xcuserdatad/xcschemes/: ngraph.native.demo.xcscheme  xcschememanagement.plist
include/: Octree.h  Random.h  application.h  application_settings.h  application_settings.inl  base_exception.h  body.h  body.inl  layout.h  layout_settings.h  primitives.h  stdafx.h
src/: Octree.cpp  Random.h  application.cpp  application_settings.cpp  body.cpp  body.inl  layout.cpp  layout.h  main.cpp  primitives.h  quadTree.cpp  quadTree.h  stdafx.h
